y.output

state 0
	$accept: .Program $end 

	CLASS  shift 3
	.  error

	Program  goto 1
	MainClass  goto 2

state 1
	$accept:  Program.$end 

	$end  accept
	.  error


state 2
	Program:  MainClass.    (1)
	Program:  MainClass.ClassDeclaration 

	CLASS  shift 5
	.  reduce 1 (src line 67)

	ClassDeclaration  goto 4

state 3
	MainClass:  CLASS.IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	IDENTIFIER  shift 6
	.  error


state 4
	Program:  MainClass ClassDeclaration.    (2)
	ClassDeclaration:  ClassDeclaration.ClassDeclaration 

	CLASS  shift 5
	.  reduce 2 (src line 68)

	ClassDeclaration  goto 7

state 5
	ClassDeclaration:  CLASS.IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 

	IDENTIFIER  shift 8
	.  error


state 6
	MainClass:  CLASS IDENTIFIER.LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 9
	.  error


7: shift/reduce conflict (shift 5(0), red'n 5(0)) on CLASS
state 7
	ClassDeclaration:  ClassDeclaration.ClassDeclaration 
	ClassDeclaration:  ClassDeclaration ClassDeclaration.    (5)

	CLASS  shift 5
	.  reduce 5 (src line 110)

	ClassDeclaration  goto 7

state 8
	ClassDeclaration:  CLASS IDENTIFIER.Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 
	Extension: .    (7)

	EXTENDS  shift 11
	.  reduce 7 (src line 124)

	Extension  goto 10

state 9
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET.PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	PUBLIC  shift 12
	.  error


state 10
	ClassDeclaration:  CLASS IDENTIFIER Extension.LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 13
	.  error


state 11
	Extension:  EXTENDS.IDENTIFIER 

	IDENTIFIER  shift 14
	.  error


state 12
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC.STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	STATIC  shift 15
	.  error


13: shift/reduce conflict (shift 20(0), red'n 10(0)) on IDENTIFIER
13: shift/reduce conflict (shift 18(0), red'n 10(0)) on INT
13: shift/reduce conflict (shift 19(0), red'n 10(0)) on BOOLEAN
state 13
	ClassDeclaration:  CLASS IDENTIFIER Extension LEFTANGLEBRACKET.VarDeclaration MethodDeclaration RIGHTANGLEBRACKET 
	VarDeclaration: .    (10)

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  reduce 10 (src line 140)

	VarDeclaration  goto 16
	Type  goto 17

state 14
	Extension:  EXTENDS IDENTIFIER.    (6)

	.  reduce 6 (src line 117)


state 15
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC.VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	VOID  shift 21
	.  error


16: shift/reduce conflict (shift 20(0), red'n 10(0)) on IDENTIFIER
16: shift/reduce conflict (shift 24(0), red'n 10(0)) on PUBLIC
16: shift/reduce conflict (shift 18(0), red'n 10(0)) on INT
16: shift/reduce conflict (shift 19(0), red'n 10(0)) on BOOLEAN
state 16
	ClassDeclaration:  CLASS IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration.MethodDeclaration RIGHTANGLEBRACKET 
	VarDeclaration:  VarDeclaration.VarDeclaration 
	VarDeclaration: .    (10)

	IDENTIFIER  shift 20
	PUBLIC  shift 24
	INT  shift 18
	BOOLEAN  shift 19
	.  error

	VarDeclaration  goto 23
	MethodDeclaration  goto 22
	Type  goto 17

state 17
	VarDeclaration:  Type.IDENTIFIER SEMICOLON 

	IDENTIFIER  shift 25
	.  error


state 18
	Type:  INT.LEFTBRACKET RIGHTBRACKET 
	Type:  INT.    (21)

	LEFTBRACKET  shift 26
	.  reduce 21 (src line 208)


state 19
	Type:  BOOLEAN.    (20)

	.  reduce 20 (src line 207)


state 20
	Type:  IDENTIFIER.    (22)

	.  reduce 22 (src line 209)


state 21
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID.MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	MAIN  shift 27
	.  error


state 22
	ClassDeclaration:  CLASS IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration.RIGHTANGLEBRACKET 
	MethodDeclaration:  MethodDeclaration.MethodDeclaration 

	PUBLIC  shift 24
	RIGHTANGLEBRACKET  shift 28
	.  error

	MethodDeclaration  goto 29

23: shift/reduce conflict (shift 20(0), red'n 8(0)) on IDENTIFIER
23: shift/reduce conflict (shift 18(0), red'n 8(0)) on INT
23: shift/reduce conflict (shift 19(0), red'n 8(0)) on BOOLEAN
23: shift/reduce conflict (shift 20(0), red'n 10(0)) on IDENTIFIER
 23: reduce/reduce conflict  (red'ns 8 and 10) on PUBLIC
 23: reduce/reduce conflict  (red'ns 8 and 10) on SYSTEMOUTPRINTLN
 23: reduce/reduce conflict  (red'ns 8 and 10) on RETURN
23: shift/reduce conflict (shift 18(0), red'n 10(0)) on INT
 23: reduce/reduce conflict  (red'ns 8 and 10) on IF
 23: reduce/reduce conflict  (red'ns 8 and 10) on WHILE
23: shift/reduce conflict (shift 19(0), red'n 10(0)) on BOOLEAN
 23: reduce/reduce conflict  (red'ns 8 and 10) on LEFTANGLEBRACKET
state 23
	VarDeclaration:  VarDeclaration.VarDeclaration 
	VarDeclaration:  VarDeclaration VarDeclaration.    (8)
	VarDeclaration: .    (10)

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  reduce 8 (src line 126)

	VarDeclaration  goto 23
	Type  goto 17

state 24
	MethodDeclaration:  PUBLIC.Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  error

	Type  goto 30

state 25
	VarDeclaration:  Type IDENTIFIER.SEMICOLON 

	SEMICOLON  shift 31
	.  error


state 26
	Type:  INT LEFTBRACKET.RIGHTBRACKET 

	RIGHTBRACKET  shift 32
	.  error


state 27
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN.LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTPARENTHESIS  shift 33
	.  error


state 28
	ClassDeclaration:  CLASS IDENTIFIER Extension LEFTANGLEBRACKET VarDeclaration MethodDeclaration RIGHTANGLEBRACKET.    (4)

	.  reduce 4 (src line 98)


29: shift/reduce conflict (shift 24(0), red'n 27(0)) on PUBLIC
state 29
	MethodDeclaration:  MethodDeclaration.MethodDeclaration 
	MethodDeclaration:  MethodDeclaration MethodDeclaration.    (27)

	PUBLIC  shift 24
	.  reduce 27 (src line 244)

	MethodDeclaration  goto 29

state 30
	MethodDeclaration:  PUBLIC Type.IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 

	IDENTIFIER  shift 34
	.  error


state 31
	VarDeclaration:  Type IDENTIFIER SEMICOLON.    (9)

	.  reduce 9 (src line 133)


state 32
	Type:  INT LEFTBRACKET RIGHTBRACKET.    (19)

	.  reduce 19 (src line 206)


state 33
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS.STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	STRING  shift 35
	.  error


state 34
	MethodDeclaration:  PUBLIC Type IDENTIFIER.LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 

	LEFTPARENTHESIS  shift 36
	.  error


state 35
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING.LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTBRACKET  shift 37
	.  error


state 36
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS.MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 
	MethodTypeDeclaration: .    (23)

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  reduce 23 (src line 210)

	Type  goto 39
	MethodTypeDeclaration  goto 38

state 37
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET.RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	RIGHTBRACKET  shift 40
	.  error


state 38
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration.RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 

	RIGHTPARENTHESIS  shift 41
	.  error


state 39
	MethodTypeDeclaration:  Type.IDENTIFIER 
	MethodTypeDeclaration:  Type.IDENTIFIER COMMA MethodTypeDeclaration 

	IDENTIFIER  shift 42
	.  error


state 40
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET.IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	IDENTIFIER  shift 43
	.  error


state 41
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS.LEFTANGLEBRACKET VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 44
	.  error


state 42
	MethodTypeDeclaration:  Type IDENTIFIER.    (24)
	MethodTypeDeclaration:  Type IDENTIFIER.COMMA MethodTypeDeclaration 

	COMMA  shift 45
	.  reduce 24 (src line 211)


state 43
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER.RIGHTPARENTHESIS LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	RIGHTPARENTHESIS  shift 46
	.  error


44: shift/reduce conflict (shift 20(0), red'n 10(0)) on IDENTIFIER
44: shift/reduce conflict (shift 18(0), red'n 10(0)) on INT
44: shift/reduce conflict (shift 19(0), red'n 10(0)) on BOOLEAN
state 44
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET.VarDeclaration Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 
	VarDeclaration: .    (10)

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  reduce 10 (src line 140)

	VarDeclaration  goto 47
	Type  goto 17

state 45
	MethodTypeDeclaration:  Type IDENTIFIER COMMA.MethodTypeDeclaration 
	MethodTypeDeclaration: .    (23)

	IDENTIFIER  shift 20
	INT  shift 18
	BOOLEAN  shift 19
	.  reduce 23 (src line 210)

	Type  goto 39
	MethodTypeDeclaration  goto 48

state 46
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS.LEFTANGLEBRACKET Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 

	LEFTANGLEBRACKET  shift 49
	.  error


47: shift/reduce conflict (shift 55(0), red'n 10(0)) on IDENTIFIER
47: shift/reduce conflict (shift 54(0), red'n 10(0)) on SYSTEMOUTPRINTLN
47: shift/reduce conflict (shift 18(0), red'n 10(0)) on INT
47: shift/reduce conflict (shift 52(0), red'n 10(0)) on IF
47: shift/reduce conflict (shift 53(0), red'n 10(0)) on WHILE
47: shift/reduce conflict (shift 19(0), red'n 10(0)) on BOOLEAN
47: shift/reduce conflict (shift 51(0), red'n 10(0)) on LEFTANGLEBRACKET
47: shift/reduce conflict (shift 55(0), red'n 18(0)) on IDENTIFIER
47: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
 47: reduce/reduce conflict  (red'ns 10 and 18) on RETURN
47: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
47: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
47: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
state 47
	VarDeclaration:  VarDeclaration.VarDeclaration 
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration.Statement RETURN Expression SEMICOLON RIGHTANGLEBRACKET 
	VarDeclaration: .    (10)
	Statement: .    (18)

	IDENTIFIER  shift 55
	SYSTEMOUTPRINTLN  shift 54
	INT  shift 18
	IF  shift 52
	WHILE  shift 53
	BOOLEAN  shift 19
	LEFTANGLEBRACKET  shift 51
	.  reduce 10 (src line 140)

	Statement  goto 50
	VarDeclaration  goto 23
	Type  goto 17

state 48
	MethodTypeDeclaration:  Type IDENTIFIER COMMA MethodTypeDeclaration.    (25)

	.  reduce 25 (src line 217)


49: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
49: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
49: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
49: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
49: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
state 49
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET.Statement RIGHTANGLEBRACKET RIGHTANGLEBRACKET 
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	.  reduce 18 (src line 205)

	Statement  goto 56

50: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
50: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
50: shift/reduce conflict (shift 59(0), red'n 18(0)) on RETURN
50: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
50: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
50: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
state 50
	Statement:  Statement.Statement 
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement.RETURN Expression SEMICOLON RIGHTANGLEBRACKET 
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	RETURN  shift 59
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	.  error

	Statement  goto 58

51: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
51: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
51: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
51: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
51: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
state 51
	Statement:  LEFTANGLEBRACKET.Statement RIGHTANGLEBRACKET 
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	.  reduce 18 (src line 205)

	Statement  goto 60

state 52
	Statement:  IF.LEFTPARENTHESIS Expression RIGHTPARENTHESIS Statement ELSE Statement 

	LEFTPARENTHESIS  shift 61
	.  error


state 53
	Statement:  WHILE.LEFTPARENTHESIS Expression RIGHTPARENTHESIS Statement 

	LEFTPARENTHESIS  shift 62
	.  error


state 54
	Statement:  SYSTEMOUTPRINTLN.LEFTPARENTHESIS Expression RIGHTPARENTHESIS SEMICOLON 

	LEFTPARENTHESIS  shift 63
	.  error


state 55
	Statement:  IDENTIFIER.EQUAL Expression SEMICOLON 
	Statement:  IDENTIFIER.LEFTBRACKET Expression RIGHTBRACKET EQUAL Expression SEMICOLON 
	Type:  IDENTIFIER.    (22)

	LEFTBRACKET  shift 65
	EQUAL  shift 64
	.  reduce 22 (src line 209)


56: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
56: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
56: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
56: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
56: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
56: shift/reduce conflict (shift 66(0), red'n 18(0)) on RIGHTANGLEBRACKET
state 56
	MainClass:  CLASS IDENTIFIER LEFTANGLEBRACKET PUBLIC STATIC VOID MAIN LEFTPARENTHESIS STRING LEFTBRACKET RIGHTBRACKET IDENTIFIER RIGHTPARENTHESIS LEFTANGLEBRACKET Statement.RIGHTANGLEBRACKET RIGHTANGLEBRACKET 
	Statement:  Statement.Statement 
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	RIGHTANGLEBRACKET  shift 66
	.  error

	Statement  goto 58

state 57
	Statement:  IDENTIFIER.EQUAL Expression SEMICOLON 
	Statement:  IDENTIFIER.LEFTBRACKET Expression RIGHTBRACKET EQUAL Expression SEMICOLON 

	LEFTBRACKET  shift 65
	EQUAL  shift 64
	.  error


58: shift/reduce conflict (shift 57(0), red'n 17(0)) on IDENTIFIER
58: shift/reduce conflict (shift 54(0), red'n 17(0)) on SYSTEMOUTPRINTLN
58: shift/reduce conflict (shift 52(0), red'n 17(0)) on IF
58: shift/reduce conflict (shift 53(0), red'n 17(0)) on WHILE
58: shift/reduce conflict (shift 51(0), red'n 17(0)) on LEFTANGLEBRACKET
58: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
58: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
 58: reduce/reduce conflict  (red'ns 17 and 18) on RETURN
58: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
 58: reduce/reduce conflict  (red'ns 17 and 18) on ELSE
58: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
58: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
 58: reduce/reduce conflict  (red'ns 17 and 18) on RIGHTANGLEBRACKET
state 58
	Statement:  Statement.Statement 
	Statement:  Statement Statement.    (17)
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	.  reduce 17 (src line 199)

	Statement  goto 58

state 59
	MethodDeclaration:  PUBLIC Type IDENTIFIER LEFTPARENTHESIS MethodTypeDeclaration RIGHTPARENTHESIS LEFTANGLEBRACKET VarDeclaration Statement RETURN.Expression SEMICOLON RIGHTANGLEBRACKET 

	BANG  shift 73
	INTEGER_LITERAL  shift 69
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 68
	THIS  shift 71
	NEW  shift 72
	LEFTPARENTHESIS  shift 74
	.  error

	Expression  goto 67

60: shift/reduce conflict (shift 57(0), red'n 18(0)) on IDENTIFIER
60: shift/reduce conflict (shift 54(0), red'n 18(0)) on SYSTEMOUTPRINTLN
60: shift/reduce conflict (shift 52(0), red'n 18(0)) on IF
60: shift/reduce conflict (shift 53(0), red'n 18(0)) on WHILE
60: shift/reduce conflict (shift 51(0), red'n 18(0)) on LEFTANGLEBRACKET
60: shift/reduce conflict (shift 75(0), red'n 18(0)) on RIGHTANGLEBRACKET
state 60
	Statement:  LEFTANGLEBRACKET Statement.RIGHTANGLEBRACKET 
	Statement:  Statement.Statement 
	Statement: .    (18)

	IDENTIFIER  shift 57
	SYSTEMOUTPRINTLN  shift 54
	IF  shift 52
	WHILE  shift 53
	LEFTANGLEBRACKET  shift 51
	RIGHTANGLEBRACKET  shift 75
	.  error

	Statement  goto 58

state 61
	Statement:  IF LEFTPARENTHESIS.Expression RIGHTPARENTHESIS Statement ELSE Statement 

	BANG  shift 73
	INTEGER_LITERAL  shift 69
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 68
	THIS  shift 71
	NEW  shift 72
	LEFTPARENTHESIS  shift 74
	.  error

	Expression  goto 76

state 62
	Statement:  WHILE LEFTPARENTHESIS.Expression RIGHTPARENTHESIS Statement 

	BANG  shift 73
	INTEGER_LITERAL  shift 69
	BOOLEAN_LITERAL  shift 70
	IDENTIFIER  shift 68
	THIS  shift 71
	NEW  shift 72
	LEFTPARENTHESIS  shift 74
	.  error

	Expression  goto 77

state 63
	Statement:  SYSTEMOUTPRINTLN LEFTPARENTHESIS.Expression RIGHTPARENTHESIS SEMICOLON 
